--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
     <div id="continue" class="messageDiv" style="display: none;"></div>
     <div class="container" id="thanks" class="thanks" style="display:none;">
         <img src="logo.jpg" width="200" height50px alt="oops wait a moment" id="logo">thanks you for registration we
-        will update you as soon as the app launches
-        <i class="fa-solid fa-smile"></i>
-
+        will update you as soon as the app launches!
     </div>
     <script type="module">
         // Import the functions you need from the SDKs
